--- a/pygeoapi-heif-maps-demo/docker/pygeoapi-heif-maps-demo.config.yml
+++ b/pygeoapi-heif-maps-demo/docker/pygeoapi-heif-maps-demo.config.yml
@@ -2,8 +2,7 @@ server:
     bind:
         host: 0.0.0.0
         port: 80
-    #url: http://localhost:8999
-    url: https://37e048b194f170.lhr.life
+    url: http://localhost:8999
     mimetype: application/json; charset=UTF-8
     encoding: utf-8
     gzip: false
